# agent-mark

./: .gitignore  CLAUDE.md  LICENSE  README.md  cli.py  pyproject.toml  run.py
.claude/: settings.local.json
adapters/: base.py  mock.py  simple.py  trustclaw.py
agent_mark/: __init__.py  cli.py
agent_mark/tasks/github/: github_003.yaml  github_004.yaml
agent_mark/tasks/gmail/: gmail_001.yaml  gmail_003.yaml  gmail_004.yaml  gmail_005.yaml
agent_mark/tasks/notion/: notion_001.yaml  notion_003.yaml  notion_004.yaml  notion_005.yaml
fixtures/: __init__.py  synthetic_gmail.py
harness/: judge.py  report.py  runner.py  scorer.py
tasks/github/: github_001.yaml  github_002.yaml  github_005.yaml
tasks/gmail/: gmail_002.yaml
tasks/linear/: linear_001.yaml  linear_002.yaml  linear_003.yaml  linear_004.yaml  linear_005.yaml
tasks/notion/: notion_002.yaml
tasks/slack/: slack_001.yaml  slack_002.yaml  slack_003.yaml  slack_004.yaml  slack_005.yaml
