[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-mark"
version = "0.1.0"
description = "Framework-agnostic evaluation harness for tool-using AI agents"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Utsav Khairnar", email = "utsavkhairnar14@gmail.com"},
]

dependencies = [
    "pyyaml>=6.0",
    "google-genai>=1.0",
    "httpx>=0.27",
    "composio-anthropic>=0.13",
    "anthropic>=0.40",
]

[project.urls]
Homepage = "https://github.com/utsav1033/agent-mark"

[project.scripts]
agent-mark = "agent_mark.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["agent_mark", "adapters", "harness"]
